// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders compact table 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1abm7iv-12 jkLevt"
  >
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-top: 0px;"
        >
          <div
            class="ant-pro-table-list-toolbar"
          />
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle ant-table-scroll-horizontal"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="width: 100%; min-width: 100%; table-layout: auto;"
                      >
                        <colgroup />
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                            >
                              Name
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              <span
                                class="styledComponents__TitleWithTooltip-sc-1abm7iv-1 gemmlX"
                              >
                                Age
                                <svg
                                  class="styledComponents__InformationTooltip-sc-1abm7iv-0"
                                  data-testid="InformationOutlined"
                                />
                              </span>
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              Address
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="1"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              John Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              32
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              sample address
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="2"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              Jane Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              33
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              new address
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="3"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              Will Smith
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              45
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              address
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table component renders form table 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1abm7iv-12 jYwfQs"
  >
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-top: 0px;"
        >
          <div
            class="ant-pro-table-list-toolbar"
          />
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle ant-table-scroll-horizontal"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="width: 100%; min-width: 100%; table-layout: auto;"
                      >
                        <colgroup />
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                            >
                              Name
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              <span
                                class="styledComponents__TitleWithTooltip-sc-1abm7iv-1 gemmlX"
                              >
                                Age
                                <svg
                                  class="styledComponents__InformationTooltip-sc-1abm7iv-0"
                                  data-testid="InformationOutlined"
                                />
                              </span>
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              Address
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="1"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              John Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              32
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              sample address
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="2"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              Jane Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              33
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              new address
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="3"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              Will Smith
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              45
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              address
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table component should render correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1abm7iv-12 jdrCXZ"
  >
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-top: 0px;"
        >
          <div
            class="ant-pro-table-list-toolbar"
          />
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 32px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              Name
                            </th>
                            <th
                              class="ant-table-cell"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              <span
                                class="styledComponents__TitleWithTooltip-sc-1abm7iv-1 gemmlX"
                              >
                                Age
                                <svg
                                  class="styledComponents__InformationTooltip-sc-1abm7iv-0"
                                  data-testid="InformationOutlined"
                                />
                              </span>
                            </th>
                            <th
                              class="ant-table-cell"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              Address
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              data-testid="react-resizable"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="1"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              John Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              32
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              sample address
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="2"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              Jane Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              33
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              new address
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="3"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              Will Smith
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              45
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              address
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table component should render multi select table and render action buttons correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1abm7iv-12 cvwnRC"
  >
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-top: 0px;"
        >
          <div
            class="ant-pro-table-list-toolbar"
          />
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            class="ant-table-selection-col"
                          />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 32px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell ant-table-selection-column"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              <div
                                class="ant-table-selection"
                              >
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value=""
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              Name
                            </th>
                            <th
                              class="ant-table-cell"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              <span
                                class="styledComponents__TitleWithTooltip-sc-1abm7iv-1 gemmlX"
                              >
                                Age
                                <svg
                                  class="styledComponents__InformationTooltip-sc-1abm7iv-0"
                                  data-testid="InformationOutlined"
                                />
                              </span>
                            </th>
                            <th
                              class="ant-table-cell"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              Address
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              data-testid="react-resizable"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="1"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-checkbox-wrapper"
                              >
                                <span
                                  class="ant-checkbox"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              John Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              32
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              sample address
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="2"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-checkbox-wrapper"
                              >
                                <span
                                  class="ant-checkbox"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              Jane Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              33
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              new address
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="3"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-checkbox-wrapper"
                              >
                                <span
                                  class="ant-checkbox"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              Will Smith
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              45
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              address
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table component should render multi select table and render action buttons correctly 2`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1abm7iv-12 cvwnRC"
  >
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-top: 0px;"
        >
          <div
            class="ant-pro-table-list-toolbar"
          />
          <div
            class="ant-pro-table-alert"
          >
            <div
              class="ant-alert ant-alert-info ant-alert-no-icon"
              data-show="true"
              role="alert"
            >
              <div
                class="ant-alert-content"
              >
                <div
                  class="ant-alert-message"
                >
                  <div
                    class="ant-pro-table-alert-info"
                  >
                    <div
                      class="ant-pro-table-alert-info-content"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 32px;"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 6px;"
                            >
                              <span>
                                2 selected
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-icon-only styledComponents__CloseButton-sc-1abm7iv-5 ilAzXH"
                                data-id="table-clear-btn"
                                title="Clear selection"
                                type="button"
                              >
                                <svg
                                  data-testid="CancelCircle"
                                />
                              </button>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 0px;"
                            >
                              <button
                                class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 ibsWZY"
                                type="button"
                              >
                                <span>
                                  Edit
                                </span>
                              </button>
                            </div>
                            <span
                              class="ant-space-item-split"
                              style="margin-right: 0px;"
                            >
                              <div
                                class="ant-divider ant-divider-vertical styledComponents__Divider-sc-1abm7iv-13 fsVtFP"
                                role="separator"
                              />
                            </span>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 ibsWZY"
                                type="button"
                              >
                                <span>
                                  Delete
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            class="ant-table-selection-col"
                          />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 32px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell ant-table-selection-column"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              <div
                                class="ant-table-selection"
                              >
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox ant-checkbox-indeterminate"
                                  >
                                    <input
                                      aria-checked="mixed"
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value=""
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              Name
                            </th>
                            <th
                              class="ant-table-cell"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              <span
                                class="styledComponents__TitleWithTooltip-sc-1abm7iv-1 gemmlX"
                              >
                                Age
                                <svg
                                  class="styledComponents__InformationTooltip-sc-1abm7iv-0"
                                  data-testid="InformationOutlined"
                                />
                              </span>
                            </th>
                            <th
                              class="ant-table-cell"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              Address
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              data-testid="react-resizable"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0 ant-table-row-selected"
                            data-row-key="1"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
                              >
                                <span
                                  class="ant-checkbox ant-checkbox-checked"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              John Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              32
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              sample address
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0 ant-table-row-selected"
                            data-row-key="2"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
                              >
                                <span
                                  class="ant-checkbox ant-checkbox-checked"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              Jane Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              33
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              new address
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="3"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-checkbox-wrapper"
                              >
                                <span
                                  class="ant-checkbox"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              Will Smith
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              45
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              address
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table component should render multi select table and render action buttons correctly 3`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1abm7iv-12 cvwnRC"
  >
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-top: 0px;"
        >
          <div
            class="ant-pro-table-list-toolbar"
          />
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            class="ant-table-selection-col"
                          />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 32px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell ant-table-selection-column"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              <div
                                class="ant-table-selection"
                              >
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value=""
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              Name
                            </th>
                            <th
                              class="ant-table-cell"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              <span
                                class="styledComponents__TitleWithTooltip-sc-1abm7iv-1 gemmlX"
                              >
                                Age
                                <svg
                                  class="styledComponents__InformationTooltip-sc-1abm7iv-0"
                                  data-testid="InformationOutlined"
                                />
                              </span>
                            </th>
                            <th
                              class="ant-table-cell"
                              data-testid="react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                              Address
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              data-testid="react-resizable"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                              />
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="1"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-checkbox-wrapper"
                              >
                                <span
                                  class="ant-checkbox"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              John Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              32
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              sample address
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="2"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-checkbox-wrapper"
                              >
                                <span
                                  class="ant-checkbox"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              Jane Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              33
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              new address
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="3"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-checkbox-wrapper"
                              >
                                <span
                                  class="ant-checkbox"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              Will Smith
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              45
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              address
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
